# learning-python

./: .gitignore  LICENSE  README.md  pyproject.toml
docker/: .env  docker-compose.yml
docker/python/: Dockerfile
src/learningpython/: main.py
src/learningpython/lp2/: main.py
src/learningpython/lp3/: strings.py
src/learningpython/lp4/: dataclasses.py  dataclasses_examples.py  descriptors.py  getattr.py
tests/lp2/: test_main.py
tests/lp3/: test_strings.py
tests/lp4/: test_dataclass_docstring.py  test_dataclasses.py  test_dataclasses_examples.py  test_dataclasses_examples_docstring.py  test_descriptors.py  test_getattr.py
